Bug #6087
closedbootadm message.h is hiding errors from lint
100%
Description
when bootadm string constants are redefined to be more lint friendly, lint reports many errors in bootadm code:
"/code/tsoome/illumos-gate/usr/src/cmd/boot/bootadm/bootadm.c", line 1379: warning: function argument type inconsistent with format: bam_print(arg 2) long and (format) int in bootadm.c(1379) (E_BAD_FORMAT_ARG_TYPE2)
"/code/tsoome/illumos-gate/usr/src/cmd/boot/bootadm/bootadm.c", line 2272: warning: too many arguments for format: bam_print in bootadm.c(2272) (E_TOO_MANY_ARG_FOR_FMT2)
"/code/tsoome/illumos-gate/usr/src/cmd/boot/bootadm/bootadm.c", line 2691: warning: too many arguments for format: bam_error in bootadm.c(2691) (E_TOO_MANY_ARG_FOR_FMT2)
"/code/tsoome/illumos-gate/usr/src/cmd/boot/bootadm/bootadm.c", line 6678: warning: too many arguments for format: bam_error in bootadm.c(6678) (E_TOO_MANY_ARG_FOR_FMT2)
"/code/tsoome/illumos-gate/usr/src/cmd/boot/bootadm/bootadm.c", line 9415: warning: too many arguments for format: bam_error in bootadm.c(9415) (E_TOO_MANY_ARG_FOR_FMT2)
"/code/tsoome/illumos-gate/usr/src/cmd/boot/bootadm/bootadm.c", line 9446: warning: too many arguments for format: bam_error in bootadm.c(9446) (E_TOO_MANY_ARG_FOR_FMT2)
"/code/tsoome/illumos-gate/usr/src/cmd/boot/bootadm/bootadm_upgrade.c", line 890: warning: too many arguments for format: bam_error in bootadm_upgrade.c(890) (E_TOO_MANY_ARG_FOR_FMT2)
Updated by Toomas Soome almost 7 years ago
- Status changed from New to Pending RTI
Updated by Electric Monk almost 7 years ago
- Status changed from Pending RTI to Closed
- % Done changed from 0 to 100
git commit 18961ad2c52f9d85e1f18c75f82d40639f483e1a
commit 18961ad2c52f9d85e1f18c75f82d40639f483e1a Author: Toomas Soome <tsoome@me.com> Date: 2015-07-30T20:57:56.000Z 6087 bootadm message.h is hiding errors from lint Reviewed by: Josef Sipek <jeffpc@josefsipek.net> Reviewed by: Marcel Telka <marcel.telka@nexenta.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>