6087 bootadm message.h is hiding errors from lint Reviewed by: Josef Sipek <jeffpc@josefsipek.net> Reviewed by: Marcel Telka <marcel.telka@nexenta.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>